@@ -121,6 +121,7 @@ Ernst de Haan
 Frank Harnack
 Frank Somers
 Frank Zeyda
+Frantisek Kucera
 Frederic Bothamy
 Frederic Lavigne
 Gary S. Weaver
