@@ -508,6 +508,10 @@
     <last>Zeyda</last>
   </name>
   <name>
+    <first>František</first>
+    <last>Kučera</last>
+  </name>
+  <name>
     <first>Frédéric</first>
     <last>Bothamy</last>
   </name>
